# POLYMARKET_STREAMING_DASHBOARD

./: .env.example  .gitignore  DASHBOARD_GUIDE.md  README.md  SERVICES.md  live_manager.py  live_switch.ps1  manage.py  restart.bat  restart.ps1  setup_vps.ps1  start.bat  start.ps1  status.bat  status.ps1  stop.bat  stop.ps1
backend/: pyproject.toml
backend/app/: config.py  envelope.py  main.py  models.py  time_utils.py
backend/app/api/: routes_http.py  routes_ws.py  state_hub.py
backend/app/collector/: calibration_watcher.py  docker_log_tail.py  entry_registry.py  leaderboard_reader.py  liveness.py  location_probe.py  orderbook_tail.py  polymarket_client.py  polymarket_status.py  state_reader.py  subprocess_utils.py  terminal_reader.py  trades_tail.py
backend/app/derive/: edge.py  equity.py  window.py
backend/app/events/: bus.py
backend/tests/: test_edge.py  test_leaderboard_reader.py  test_liveness.py  test_polymarket_client.py  test_polymarket_status.py  test_state_hub.py  test_state_reader.py  test_terminal_reader.py  test_time_utils.py  test_trades_tail.py  test_window.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: BotStatusBanner.tsx  CalibrationStatus.tsx  CpuStatus.tsx  EdgeRatioPanel.tsx  EquitySparkline.tsx  Footer.tsx  InstanceSelector.tsx  InstanceStatsCard.tsx  LeaderboardMini.tsx  LocationChip.tsx  MarketInfoCard.tsx  (+7 more)
scripts/: run_dev.sh  run_prod.sh  setup_btc_pricer_15m_vps.sh
tests/: test_live_manager_history_guard.py
(+7 files in other folders)
